# NeuralCPP

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md
include/: NeuralActivation.hpp  NeuralCPP.hpp  NeuralLayers.hpp  NeuralLoss.hpp  NeuralPerceptron.hpp
include/model/: LinearRegression.hpp  NeuralModel.hpp
src/: NeuralActivation.cpp  NeuralCPP.cpp  NeuralLayers.cpp  NeuralLoss.cpp  NeuralPerceptron.cpp
src/model/: LinearRegression.cpp
test/: NeuralLossTest.cpp
